@@ -1,5 +1,7 @@
 pgcenter (devel) unstable; urgency=low
 
+  * fix signal_group_backend(), doesn't work if mask has more than one flag.
+  * improve const correctness.
   * autovac info: print number of user vacuum and autovac max worker limit.
   * check_pg_listen_addr() refactoring.
   * pg_stat_replication now works on standbys too.
